cmd/cloud-hashing-inspire/k8s/01-cloud-hashing-inspire.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-hashing-inspire
  namespace: kube-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cloud-hashing-inspire
  template:
    metadata:
      labels:
        app: cloud-hashing-inspire
    spec:
      containers:
      - name: cloud-hashing-inspire
        image: entropypool/cloud-hashing-inspire:latest
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: cloud-hashing-inspire
  namespace: kube-system
spec:
  ports:
  - name: api
    port: 8080
