cmd/cloud-hashing-inspire/k8s/02-traefik-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cloud-hashing-inspire-traefik-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: cloud-hashing-inspire-traefik
    k8s.kuboard.cn/workload: cloud-hashing-inspire-traefik
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-strip-cloud-hashing-inspire-prefix@kubernetescrd,kube-system-common-headers@kubernetescrd,kube-system-common-headers@kubernetescrd

spec:
  tls:
      - hosts:
          - www.procyon.vip
          - procyon.vip
        secretName: procyon-vip-tls
  rules:
    - host: api.npool.top
      http: &http_rules
        paths:
          - path: /api/cloud-hashing-inspire/version
            backend:
              serviceName: cloud-hashing-inspire
              servicePort: 50130
    - host: api.xpool.top
      http: *http_rules
    - host: www.npool.top
      http: *http_rules
    - host: www.xpool.top
      http: *http_rules
    - host: www.procyon.vip
      http: *http_rules
    - host: procyon.vip
      http: *http_rules

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cloud-hashing-inspire-traefik-appid-userid-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: cloud-hashing-inspire-appid-userid-traefik
    k8s.kuboard.cn/workload: cloud-hashing-inspire-appid-userid-traefik
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-strip-cloud-hashing-apis-prefix@kubernetescrd,kube-system-cookies-appid-to-body@kubernetescrd,kube-system-cookies-userid-to-body@kubernetescrd,kube-system-common-headers@kubernetescrd

spec:
  tls:
    - secretName: procyon-vip-tls
  rules:
    - host: api.npool.top
      http: &http_appid_userid_rules
        paths:
          - path: /api/cloud-hashing-inspire/v1/get/user/invitation/code
            backend:
              serviceName: cloud-hashing-inspire
              servicePort: 50130
          - path: /api/cloud-hashing-inspire/v1/get/user/invitation/code/by/app/user
            backend:
              serviceName: cloud-hashing-inspire
              servicePort: 50130
    - host: api.xpool.top
      http: *http_appid_userid_rules
    - host: www.npool.top
      http: *http_appid_userid_rules
    - host: www.xpool.top
      http: *http_appid_userid_rules
    - host: www.procyon.vip
      http: *http_appid_userid_rules
    - host: procyon.vip
      http: *http_appid_userid_rules

---

apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-cloud-hashing-inspire-prefix
  namespace: kube-system
spec:
  stripPrefix:
    prefixes:
      - /api/cloud-hashing-inspire
