cmd/cloud-hashing-inspire/k8s/03-nginx-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cloud-hashing-inspire-nginx-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: cloud-hashing-inspire-nginx
    k8s.kuboard.cn/workload: cloud-hashing-inspire-nginx
    kubernetes.io/ingress.class: "devops-vpn-nginx-internal"
    nginx.com/sticky-cookie-services: "serviceName=kuboard srv_id expires=1h path=/"
    nginx.ingress.kubernetes.io/rewrite-target: /$2

spec:
  rules:
    - host: api.internal-devops.development.npool.top
      http: &http_rules
        paths:
          - path: /api/cloud-hashing-inspire(/|$)(.*)
            backend:
              serviceName: cloud-hashing-inspire
              servicePort: 50130
    - host: api.internal-devops.development.xpool.top
      http: *http_rules
    - host: www.internal-devops.development.npool.top
      http: *http_rules
    - host: www.internal-devops.development.xpool.top
      http: *http_rules
