cmd/cloud-hashing-inspire/k8s/03-traefik-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cloud-hashing-inspire-traefik-app-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: cloud-hashing-inspire-traefik-app
    k8s.kuboard.cn/workload: cloud-hashing-inspire-traefik-app
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-strip-cloud-hashing-inspire-prefix@kubernetescrd,
                                                      kube-system-common-headers@kubernetescrd,
                                                      kube-system-headers-appid-to-body@kubernetescrd,
                                                      kube-system-headers-appid-userid-to-body@kubernetescrd,
                                                      kube-system-headers-app-login-token-to-body@kubernetescrd,
                                                      kube-system-app-rbac-auth@kubernetescrd

spec:
  rules:
    - host: api.npool.top
      http: &http_rules
        paths:
          - path: /api/cloud-hashing-inspire/version
            backend:
              serviceName: cloud-hashing-inspire
              servicePort: 50130
    - host: api.procyon.vip
      http: *http_rules
    - host: api.xpool.top
      http: *http_rules
    - host: api.ohhash.com
      http: *http_rules

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cloud-hashing-inspire-traefik-app-user-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: cloud-hashing-inspire-traefik-app-user
    k8s.kuboard.cn/workload: cloud-hashing-inspire-traefik-app-user
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-strip-cloud-hashing-inspire-prefix@kubernetescrd,
                                                      kube-system-common-headers@kubernetescrd,
                                                      kube-system-headers-appid-to-body@kubernetescrd,
                                                      kube-system-headers-userid-to-body@kubernetescrd,
                                                      kube-system-headers-app-login-token-to-body@kubernetescrd,
                                                      kube-system-app-user-role-rbac-auth@kubernetescrd

spec:
  rules:
    - host: api.npool.top
      http: &http_rules
        paths:
          - path: /api/cloud-hashing-inspire/v1/get/user/invitation/code
            backend:
              serviceName: cloud-hashing-inspire
              servicePort: 50130
          - path: /api/cloud-hashing-inspire/v1/get/user/invitation/code/by/app/user
            backend:
              serviceName: cloud-hashing-inspire
              servicePort: 50130
          - path: /api/cloud-hashing-inspire/v1/get/registration
            backend:
              serviceName: cloud-hashing-inspire
              servicePort: 50130
          - path: /api/cloud-hashing-inspire/v1/create/user/invitation/code
            backend:
              serviceName: cloud-hashing-inspire
              servicePort: 50130
          - path: /api/cloud-hashing-inspire/v1/create/activity
            backend:
              serviceName: cloud-hashing-inspire
              servicePort: 50130
          - path: /api/cloud-hashing-inspire/v1/update/activity
            backend:
              serviceName: cloud-hashing-inspire
              servicePort: 50130
          - path: /api/cloud-hashing-inspire/v1/get/activities
            backend:
              serviceName: cloud-hashing-inspire
              servicePort: 50130
          - path: /api/cloud-hashing-inspire/v1/create/coupon/pool
            backend:
              serviceName: cloud-hashing-inspire
              servicePort: 50130
          - path: /api/cloud-hashing-inspire/v1/update/coupon/pool
            backend:
              serviceName: cloud-hashing-inspire
              servicePort: 50130
          - path: /api/cloud-hashing-inspire/v1/get/coupon/pools
            backend:
              serviceName: cloud-hashing-inspire
              servicePort: 50130
          - path: /api/cloud-hashing-inspire/v1/create/discount/pool
            backend:
              serviceName: cloud-hashing-inspire
              servicePort: 50130
          - path: /api/cloud-hashing-inspire/v1/update/discount/pool
            backend:
              serviceName: cloud-hashing-inspire
              servicePort: 50130
          - path: /api/cloud-hashing-inspire/v1/get/discount/pools
            backend:
              serviceName: cloud-hashing-inspire
              servicePort: 50130
          - path: /api/cloud-hashing-inspire/v1/create/user/special/reduction
            backend:
              serviceName: cloud-hashing-inspire
              servicePort: 50130
          - path: /api/cloud-hashing-inspire/v1/update/user/special/reduction
            backend:
              serviceName: cloud-hashing-inspire
              servicePort: 50130
          - path: /api/cloud-hashing-inspire/v1/get/user/special/reductions
            backend:
              serviceName: cloud-hashing-inspire
              servicePort: 50130
          - path: /api/cloud-hashing-inspire/v1/create/coupon/allocated
            backend:
              serviceName: cloud-hashing-inspire
              servicePort: 50130
          - path: /api/cloud-hashing-inspire/v1/update/coupon/allocated
            backend:
              serviceName: cloud-hashing-inspire
              servicePort: 50130
          - path: /api/cloud-hashing-inspire/v1/get/coupons/allocated
            backend:
              serviceName: cloud-hashing-inspire
              servicePort: 50130
          - path: /api/cloud-hashing-inspire/v1/create/event/coupon
            backend:
              serviceName: cloud-hashing-inspire
              servicePort: 50130
          - path: /api/cloud-hashing-inspire/v1/update/event/coupon
            backend:
              serviceName: cloud-hashing-inspire
              servicePort: 50130
          - path: /api/cloud-hashing-inspire/v1/get/event/coupons
            backend:
              serviceName: cloud-hashing-inspire
              servicePort: 50130
          - path: /api/cloud-hashing-inspire/v1/get/commission
            backend:
              serviceName: cloud-hashing-inspire
              servicePort: 50130
          - path: /api/cloud-hashing-inspire/v1/create/commission
            backend:
              serviceName: cloud-hashing-inspire
              servicePort: 50130
          - path: /api/cloud-hashing-inspire/v1/get/app
            backend:
              serviceName: cloud-hashing-inspire
              servicePort: 50130
          - path: /api/cloud-hashing-inspire/v1/create/app
            backend:
              serviceName: cloud-hashing-inspire
              servicePort: 50130
          - path: /api/cloud-hashing-inspire/v1/update/app
            backend:
              serviceName: cloud-hashing-inspire
              servicePort: 50130
    - host: api.procyon.vip
      http: *http_rules
    - host: api.xpool.top
      http: *http_rules
    - host: api.ohhash.com
      http: *http_rules
